opening SQL FX sample from properties sample && 'badass runtime' i. e. custom JDK build